// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer className is test_drawer 1`] = `
<div
  class=""
>
  <div
    class="fishd-drawer fishd-drawer-right test_drawer"
  >
    <div
      class="fishd-drawer-mask"
    />
    <div
      class="fishd-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="fishd-drawer-content"
      >
        <div
          class="fishd-drawer-wrapper-body"
          style="overflow:auto;height:100%;opacity:0;transition:opacity .3s"
        >
          <button
            aria-label="Close"
            class="fishd-drawer-close"
          >
            <span
              class="fishd-drawer-close-x"
            />
          </button>
          <div
            class="fishd-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer closable is false 1`] = `
<div
  class=""
>
  <div
    class="fishd-drawer fishd-drawer-right"
  >
    <div
      class="fishd-drawer-mask"
    />
    <div
      class="fishd-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="fishd-drawer-content"
      >
        <div
          class="fishd-drawer-wrapper-body"
          style="overflow:auto;height:100%"
        >
          <div
            class="fishd-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer destroyOnClose is true 1`] = `
<div
  class=""
>
  <div
    class="fishd-drawer fishd-drawer-right"
  >
    <div
      class="fishd-drawer-mask"
    />
    <div
      class="fishd-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="fishd-drawer-content"
      >
        <div
          class="fishd-drawer-wrapper-body"
          style="overflow:auto;height:100%;opacity:0;transition:opacity .3s"
        >
          <button
            aria-label="Close"
            class="fishd-drawer-close"
          >
            <span
              class="fishd-drawer-close-x"
            />
          </button>
          <div
            class="fishd-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer have a title 1`] = `
<div
  class=""
>
  <div
    class="fishd-drawer fishd-drawer-right"
  >
    <div
      class="fishd-drawer-mask"
    />
    <div
      class="fishd-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="fishd-drawer-content"
      >
        <div
          class="fishd-drawer-wrapper-body"
          style="overflow:auto;height:100%"
        >
          <div
            class="fishd-drawer-header"
          >
            <div
              class="fishd-drawer-title"
            >
              Test Title
            </div>
          </div>
          <button
            aria-label="Close"
            class="fishd-drawer-close"
          >
            <span
              class="fishd-drawer-close-x"
            />
          </button>
          <div
            class="fishd-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer render correctly 1`] = `
<div
  class=""
>
  <div
    class="fishd-drawer fishd-drawer-right"
  >
    <div
      class="fishd-drawer-mask"
    />
    <div
      class="fishd-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:400px"
    >
      <div
        class="fishd-drawer-content"
      >
        <div
          class="fishd-drawer-wrapper-body"
          style="overflow:auto;height:100%"
        >
          <button
            aria-label="Close"
            class="fishd-drawer-close"
          >
            <span
              class="fishd-drawer-close-x"
            />
          </button>
          <div
            class="fishd-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
